PharmaDemo/src/objects/Purchase_Requisition__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Code__c</fullName>
        <label>Cost Center Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_ISO__c</fullName>
        <formula>CASE( Currency__c , &apos;Swiss Franc&apos;, &apos;CHF&apos;, &apos;European Euro&apos;, &apos;EUR&apos;,&apos;British Pound&apos;, &apos;GBP&apos;,&apos;United States Dollar&apos;,&apos;USD&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency_ISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Swiss Franc</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>European Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Project_Name__c</fullName>
        <inlineHelpText>Please indicate the resource or project</inlineHelpText>
        <label>Resource/Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PR_Message__c</fullName>
        <description>Upon sending the PR from SFDC, SAP will return a message that would show the success or failure of the PR posting.</description>
        <label>SAP PR Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PR_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked if the PR send from SFDC has been successfully registered in SAP.</description>
        <label>SAP PR Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_PurchaseRequestID__c</fullName>
        <externalId>true</externalId>
        <label>SAP PurchaseRequestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>Purchase_Requisition_Item__c.Total__c</summarizedField>
        <summaryForeignKey>Purchase_Requisition_Item__c.Purchase_Requisition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Purchase Requisitions</relationshipLabel>
        <relationshipName>Purchase_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Requisition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Project_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Ending_Date__c</columns>
        <columns>SAP_PurchaseRequestID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{DD}-{MM}-{YY}-{000}</displayFormat>
        <label>Purchase Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_blank_comments</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Comments__c)</errorConditionFormula>
        <errorMessage>Please add comments to this purchase requisition</errorMessage>
    </validationRules>
</CustomObject>